| Bug #48673 | ndb_print_backup_file version compare fails | ||
|---|---|---|---|
| Submitted: | 10 Nov 2009 18:29 | Modified: | 10 Mar 2010 9:31 |
| Reporter: | Andrew Hutchings | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Cluster: Cluster (NDB) storage engine | Severity: | S3 (Non-critical) |
| Version: | OS: | Any | |
| Assigned to: | Jonas Oreland | CPU Architecture: | Any |
[10 Nov 2009 18:29]
Andrew Hutchings
[9 Mar 2010 14:24]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/102722 3133 Jonas Oreland 2010-03-09 ndb - ndb_print_backup - bug#48673, bug#41512 - adopt to azio changes
[9 Mar 2010 15:28]
Jonas Oreland
pushed to 6.3.33 and 7.0.14
[10 Mar 2010 9:31]
Jon Stephens
Documented bugfix in the NDB-6.3.33 and 7.0.14 changelogs. See BUG#41512 for changelog entry. Closed.
