ndb - ndb_print_backup - bug#48673, bug#41512 - adopt to azio changes